# neuroplan-research

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  requirements-dev.txt
.github/workflows/: test.yml
NeuroPlan/: CMakeLists.txt
NeuroPlan/NeuroPlanWorkflow/: CMakeLists.txt  NeuroPlanWorkflow.py  deid_gate.py  gate_policy.py  metrics.py  registration_quality.py  segmentation_proposal.py  widget_logic.py
docs/: EXCLUSIONS.md  de-identification-SOP.md  research-protocol.md  safety-and-failure-modes.md  ux-layer-architecture.md  validation-plan.md
handoff/: ARCHITECT-BRIEF.md  BUILD-LOG.md  DEVELOPMENT-PLAN.md  SESSION-CHECKPOINT.md
neuroplan_ui/: README.md  __init__.py  app.py  banner.py  command_parser.py  export.py  pending_actions.py  slicer_bridge.py  workflow.py
phantom/: README.md  ground_truth_fiducials.candidate.csv  ground_truth_targets.candidate.csv
phantom/cad/: README.md
tests/: conftest.py  test_command_parser.py  test_deid_gate.py  test_export_banner.py  test_gate_policy.py  test_metrics.py  test_pending_actions.py  test_phantom_ground_truth.py  test_registration_quality.py  test_segmentation_proposal.py  test_widget_logic.py  test_workflow_gates.py
